// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties Atom|Button click 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<button
  className="c0"
  onClick={[Function]}
>
  foo
</button>
`;

exports[`FileProperties Atom|Button default 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<button
  className="c0"
>
  foo
</button>
`;
